# osem

./: .gitignore  Anchor.toml  Cargo.toml  DARK_THEME_STATUS.md  DEFI_FEATURES_SUMMARY.md  DEVNET_DEPLOYMENT.md  FRONTEND_CONTRACT_INTEGRATION.md  MIGRATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  README_COMPLETE.md  REAL_DATA_IMPLEMENTATION.md  SERVER_GUIDE.md  THEME_FIX_STATUS.md  TIER_IMPLEMENTATION_SUMMARY.md  USDC_STAKING_README.md  check-osem.sh  dark-theme-troubleshoot.sh  package.json  package.json.backup  start-osem.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  security.yml
backend/: README.md  package.json
backend/api/: onramp.ts
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  SECURITY.md  TESTS.md  USER_GUIDE.md
frontend/: .env.development  README.md  jest.config.js  next.config.js  next.config.js.backup  next.config.js.broken  package.json  tailwind.config.js  tsconfig.json
frontend-vite/: .env.example  .gitignore  ENHANCEMENTS_SUMMARY.md  README.md  WALLET_INTEGRATION_STATUS.md  dev-clean.sh  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend-vite/__tests__/: InsuranceReserve.test.tsx  YieldOptimization.test.tsx  (+2 more)
indexer/: README.md  package.json  schema.sql
indexer/src/: index.ts  (+1 more)
programs/oseme-group/: Cargo.toml  README.md
programs/oseme-group/src/: errors.rs  events.rs  lib.rs  state.rs
programs/oseme-group/src/instructions/: contribute.rs  create_group.rs  init_platform.rs  mod.rs  release_payout.rs
programs/oseme-group/tests/: acceptance.test.ts  oseme-group.ts
programs/oseme-treasury/: Cargo.toml  README.md
programs/oseme-trust/: Cargo.toml  README.md
(+132 files in other folders)
